syntax = "proto3";

package user_service;
option go_package = "genproto/user_service";

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string password = 5;
  string phone_number = 6;
  string gender = 7;
  int64 age = 8;
  string role = 9;
  string refresh = 10;
  string created_at = 11;
  string updated_at = 12;
}

message IsUnique {
  string email = 1;
}

message UserWithID {
  string id = 1;
}

message RefreshRequest {
  string user_id = 1;
  string role = 2;
  string refresh_token = 3;
}

message UpdatePasswordRequest {
  string user_id = 1;
  string role = 2;
  string new_password = 3;
}

message ResponseStatus {
  bool status = 1;
}

message DeleteUserResponse {
  bool status = 1;
}

message ListUserRequest {
  int64 page = 1;
  int64 limit = 2;
}

message ListUserResponse {
  repeated User users = 1;
}